--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,33 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+      <div class="header">
+   <div class="container">
+        <div class="row">
+             <div class="menu col-xs-8">
+                  <ul> 
+                      <li><a href="/">Welcome</a></li>
+                      <li><a href="portfolio">Portfolio</a></li> 
+                      <li><a href="https://medium.com/about-codecademy">Blog</a></li>
+                      <li><a href="about">About</a></li> <li><a href="contact">Contact</a></li>
+                 </ul>
+             </div>
+          <div class="name col-xs-4">
+               <h1>Sounkoun Soumare</h1>
+          </div> 
+        </div> 
+    </div>
+</div>
 <%= yield %>
-
+<div class="footer">
+		  <div class="container"> 
+    		  <ul class="social_media"> 
+        		  <li><a class="github" href="https://twitter.com/Vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/R6QRLr2RIJRalb2neawde9uHMYcBEkpjnLjd0ng33rztVQyKP90k4AHAEo0MONWb/file"></a></li> 
+        		  <li><a class="linkedin" href="#">linkedin</a></li> 
+        		  <li><a class="twitter" href="#">twitter</a></li> 
+    		  </ul> 
+		  <p>© 2016 Sounkoun Soumare</p> 
+		  </div>
+</div>
 </body>
 </html>
