Change gemfile for heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,9 @@
 <div class="footer">
 		  <div class="container"> 
     		  <ul class="social_media"> 
-        		  <li><a class="github" href="https://twitter.com/Vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/R6QRLr2RIJRalb2neawde9uHMYcBEkpjnLjd0ng33rztVQyKP90k4AHAEo0MONWb/file"></a></li> 
-        		  <li><a class="linkedin" href="#">linkedin</a></li> 
-        		  <li><a class="twitter" href="#">twitter</a></li> 
+        		  <li><a class="github" href="https://github.com/vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/DlKQChmw6Z603XL9xPMqVWQUzWdi3W70NGsZqPj7hUmlAUPvXZE3zbrtLskAp9vO/file"></a></li> 
+        		  <li><a class="linkedin" href="https://www.linkedin.com/m/"><img src="https://dl.dropboxusercontent.com/content_link/ivKYBvE8tnFJuSDk9X3GzIE1ijeM52VJkmqS0OCj1uAao4vQQRaUetxOPmH9IbvG/file"></a></li> 
+        		  <li><a class="twitter" href="https://twitter.com/Vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/NuddofAen7UIWxOHMVmTHorcwCnKVyAodWYHHFjshASHwpYN3UtIfqP4jFusEBmS/file"></a></li> 
     		  </ul> 
 		  <p>© 2016 Sounkoun Soumare</p> 
 		  </div>
