Change the layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
                       <li><a href="/">Welcome</a></li>
                       <li><a href="portfolio">Portfolio</a></li> 
                       <li><a href="https://medium.com/about-codecademy">Blog</a></li>
-                      <li><a href="about">About</a></li> <li><a href="contact">Contact</a></li>
+                      <li><a href="about">About</a></li>
+                      <li><a href="contact">Contact</a></li>
                  </ul>
              </div>
           <div class="name col-xs-4">
@@ -30,11 +31,11 @@
 <div class="footer">
 		  <div class="container"> 
     		  <ul class="social_media"> 
-        		  <li><a class="github" href="https://github.com/vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/DlKQChmw6Z603XL9xPMqVWQUzWdi3W70NGsZqPj7hUmlAUPvXZE3zbrtLskAp9vO/file"></a></li> 
-        		  <li><a class="linkedin" href="https://www.linkedin.com/m/"><img src="https://dl.dropboxusercontent.com/content_link/ivKYBvE8tnFJuSDk9X3GzIE1ijeM52VJkmqS0OCj1uAao4vQQRaUetxOPmH9IbvG/file"></a></li> 
-        		  <li><a class="twitter" href="https://twitter.com/Vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/NuddofAen7UIWxOHMVmTHorcwCnKVyAodWYHHFjshASHwpYN3UtIfqP4jFusEBmS/file"></a></li> 
+        		  <li><a class="github" href="https://github.com/vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/1LvhGFHblFvWqRJBGQrmjPO7iXt7wT1u7bY8UOg9N5DXsUB2XybHS3hjMPlvjjOT/file"></a></li> 
+        		  <li><a class="linkedin" href="https://www.linkedin.com/m/"><img src="https://dl.dropboxusercontent.com/content_link/SAuxSdVGgEjHLNUTYE5pDnyVFKeE4M5GpgqR4zPq3iqSAclDs4ShQjDlEhT0StZH/file"></a></li> 
+        		  <li><a class="twitter" href="https://twitter.com/Vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/uJxQENjniNWsiFkVhJDEIoDaLIj0AcK5zYtUeXl6WV07uuSE2r8YnMEnkZTwDlDz/file"></a></li> 
     		  </ul> 
-		  <p>© 2016 Sounkoun Soumare</p> 
+		      <p>© 2016 Sounkoun Soumare</p> 
 		  </div>
 </div>
 </body>
