--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,10 +1,10 @@
 <div class="banner">
     <ul>
        
-                        <li><a href="#"><img src="https://dl.dropboxusercontent.com/content_link/Xex8DhwYgO4bRMr1cVFW2y6J8GZd7Z0PKCZz2Mrho7LwsbcrBK4Jp2IXFyjFzzsJ/file"></a></li>
+                        <li><a href="#"><%= image_url('travel.PNG') %></a></li>
                        
             
-                        <li><a href="#"><img src="https://dl.dropboxusercontent.com/content_link/zUAcuDguROEnBV2elV9bp5FH3lhVkWNKPkxag5XqB75hmvQ5ODuZGi7u39oNpy7s/file"></a></li>
+                        <li><a href="#"><img src="#{image_url('travel.PNG')}"></a></li>
                
                         <li><a href="#"><img src="https://dl.dropboxusercontent.com/content_link/792aYzGH2jkjX1xqXaKzNHLqCshah51qd6g2IYCrUET0f9kK97Qjp9Xg18qGgnoO/file"></a></li>
                
