fixed image_tag helper

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
     <ul>
        
-                        <li><a href="#"><%= image_url('travel.PNG') %></a></li>
+                        <li><a href="#"><%= image_tag('travel.PNG') %></a></li>
                        
             
                         <li><a href="#"><img src="#{image_url('travel.PNG')}"></a></li>
