fix image for social media

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
                       <li><a href="https://medium.com/about-codecademy">Blog</a></li>
                       <li><a href="about">About</a></li>
                       <li><a href="contact">Contact</a></li>
+                      
                  </ul>
              </div>
           <div class="name col-xs-4">
@@ -31,9 +32,10 @@
 <div class="footer">
 		  <div class="container"> 
     		  <ul class="social_media"> 
-        		  <li><a class="github" href="https://github.com/vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/1LvhGFHblFvWqRJBGQrmjPO7iXt7wT1u7bY8UOg9N5DXsUB2XybHS3hjMPlvjjOT/file"></a></li> 
-        		  <li><a class="linkedin" href="https://www.linkedin.com/m/"><img src="https://dl.dropboxusercontent.com/content_link/SAuxSdVGgEjHLNUTYE5pDnyVFKeE4M5GpgqR4zPq3iqSAclDs4ShQjDlEhT0StZH/file"></a></li> 
-        		  <li><a class="twitter" href="https://twitter.com/Vsoumare"><img src="https://dl.dropboxusercontent.com/content_link/uJxQENjniNWsiFkVhJDEIoDaLIj0AcK5zYtUeXl6WV07uuSE2r8YnMEnkZTwDlDz/file"></a></li> 
+    		      
+        		  <li><a class="github" href="https://github.com/vsoumare" target="_blank"><%= image_tag('github-big-logo.png') %></a></li> 
+        		  <li><a class="linkedin" href="https://www.linkedin.com/m/" target="_blank"><%= image_tag('linkedin-logo.png') %></a></li> 
+        		  <li><a class="twitter" href="https://twitter.com/Vsoumare" target="_blank"><%= image_tag('twitter-logo-silhouette.png') %></a></li> 
     		  </ul> 
 		      <p>© 2016 Sounkoun Soumare</p> 
 		  </div>
