--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -2,12 +2,12 @@
     <ul>
        
                         <li><a href="#"><%= image_tag('travel.PNG') %></a></li>
+                        <li><a href="#"><%= image_tag('photopro.PNG') %></a></li>
+                        <li><a href="#"><%= image_tag('zenithPic.PNG') %></a></li>
+                       
                        
             
-                        <li><a href="#"><img src="#{image_url('travel.PNG')}"></a></li>
-               
-                        <li><a href="#"><img src="https://dl.dropboxusercontent.com/content_link/792aYzGH2jkjX1xqXaKzNHLqCshah51qd6g2IYCrUET0f9kK97Qjp9Xg18qGgnoO/file"></a></li>
-               
+                   
     </ul>
     
 </div>
