create contactt model

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,14 +1,41 @@
 <div class="banner">
     <ul>
-       
+             
+                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
+               
                         <li><a href="#"><%= image_tag('travel.PNG') %></a></li>
+               
                         <li><a href="#"><%= image_tag('photopro.PNG') %></a></li>
-                        <li><a href="#"><%= image_tag('zenithPic.PNG') %></a></li>
-                       
-                       
-            
+                    
+                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
+           
                    
     </ul>
     
 </div>
-
+<div class="expo">
+    <ul>
+        <div class="row">
+                <div class="col-md-offset-2">
+                    </div>
+                <div class="col-md-8">       
+                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
+                </div>
+                <div class="col-md-offset-2">
+                    </div>
+        </div>        
+        <div class="row">
+                <div class="col-md-4">    
+                        <li><a href="#"><%= image_tag('travel.PNG') %></a></li>
+                </div>  
+                <div class="col-md-4"> 
+                        <li><a href="#"><%= image_tag('photopro.PNG') %></a></li>
+                </div>       
+                <div class="col-md-4">       
+                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
+                </div>       
+        </div>               
+            
+                   
+    </ul>
+</div>
