--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -2,7 +2,7 @@
 <div class="main home">
 		   <div class="jumbotron">
 		      <div class="container">
-		          <h2>Hello. My name is <span class="highlight">Sounkoun Soumare</span> and I am Ruby on Rails front and back end developer. I have creative ideas and build websites</h2>
+		          <h2>Welcome to my World. My name is <span class="highlight">Sounkoun Soumare</span> and I am Ruby on Rails developer. Allow me to guide Through the Universe of Ruby.</h2>
 		          <a class="btn right" href="portfolio">View my Work</a>
 		      </div>
 		 </div>
