--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
                   <ul> 
                       <li><a href="/">Welcome</a></li>
                       <li><a href="portfolio">Portfolio</a></li> 
-                      <li><a href="https://medium.com/about-codecademy">Blog</a></li>
+                      <li><a href="#">Blog</a></li>
                       <li><a href="about">About</a></li>
                       <li><a href="contact">Contact</a></li>
                       
