--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
                       <li><a href="/">Welcome</a></li>
                       <li><a href="portfolio">Portfolio</a></li> 
                       <li><a href="#">Blog</a></li>
-                      <li><a href="about">About</a></li>
-                      <li><a href="contact">Contact</a></li>
+                      <li><%= link_to "About", about_path %></li>
+                      <li><%= link_to "Contact Us", new_contact_path %></li>
                       
                  </ul>
              </div>
