--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
                       <li><a href="portfolio">Portfolio</a></li> 
                       <li><a href="#">Blog</a></li>
                       <li><%= link_to "About", about_path %></li>
-                      <li><%= link_to "Contact Us", new_contact_path %></li>
+                      <li><%= link_to "Contact", new_contact_path %></li>
                       
                  </ul>
              </div>
@@ -28,7 +28,12 @@
         </div> 
     </div>
 </div>
+<div class="container">
+    <% flash.each do |key, value| %>
+  <%= content_tag :div, value, class: "alert alert-#{key}" %>
+<% end %>
 <%= yield %>
+</div>
 <div class="footer">
 		  <div class="container"> 
     		  <ul class="social_media"> 
