Create a blog page

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,41 +1,15 @@
 <div class="banner">
     <ul>
              
-                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
+                        <li><a href="http://70.62.244.154/users/sign_in"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
                
-                        <li><a href="#"><%= image_tag('travel.PNG') %></a></li>
+                       
                
                         <li><a href="#"><%= image_tag('photopro.PNG') %></a></li>
                     
-                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
+                        
            
                    
     </ul>
     
-</div>
-<div class="expo">
-    <ul>
-        <div class="row">
-                <div class="col-md-offset-2">
-                    </div>
-                <div class="col-md-8">       
-                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
-                </div>
-                <div class="col-md-offset-2">
-                    </div>
-        </div>        
-        <div class="row">
-                <div class="col-md-4">    
-                        <li><a href="#"><%= image_tag('travel.PNG') %></a></li>
-                </div>  
-                <div class="col-md-4"> 
-                        <li><a href="#"><%= image_tag('photopro.PNG') %></a></li>
-                </div>       
-                <div class="col-md-4">       
-                        <li><a href="#"><%= image_tag('zenithEastBusRoute.PNG') %></a></li>
-                </div>       
-        </div>               
-            
-                   
-    </ul>
 </div>
