--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
         <div class="row">
              <div class="menu col-xs-8">
                   <ul> 
-                      <li><a href="/">Welcome</a></li>
-                      <li><a href="portfolio">Portfolio</a></li> 
-                      <li><a href="#">Blog</a></li>
+                      <li><%= link_to 'Welcome', root_path %></li>
+                      <li><%= link_to 'Portfolio', portfolio_path %></li> 
+                      <li><%= link_to 'Blog', posts_path %></li>
                       <li><%= link_to "About", about_path %></li>
                       <li><%= link_to "Contact", new_contact_path %></li>
                       
@@ -39,7 +39,7 @@
     		  <ul class="social_media"> 
     		      
         		  <li><a class="github" href="https://github.com/vsoumare" target="_blank"><%= image_tag('github-big-logo.png') %></a></li> 
-        		  <li><a class="linkedin" href="https://www.linkedin.com/m/" target="_blank"><%= image_tag('linkedin-logo.png') %></a></li> 
+        		  <li><a class="linkedin" href="https://www.linkedin.com/in/sounkoun-soumare-85b21a14" target="_blank"><%= image_tag('linkedin-logo.png') %></a></li> 
         		  <li><a class="twitter" href="https://twitter.com/Vsoumare" target="_blank"><%= image_tag('twitter-logo-silhouette.png') %></a></li> 
     		  </ul> 
 		      <p>© 2016 Sounkoun Soumare</p> 
