--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,16 @@
 
 <h1>About me</h1>
-<p>Building new appilcation everyda5r</p> 
+
+
+<div class="raw" >
+    <div class="thumbnail col-md-4">
+    <%= image_tag  ('IMG_0879.JPG') %>
+    </div>
+
+<div class="col-md-8">
+<p class="description">Hi my name is Sounkoun Soumare, I am a Ruby on 
+Rails developer. I like to learn and teach new technologies.
+If you are new to web development follow my blog and I will
+teach you some of the best way to start learrning</p>.
+</div>
+</div>
