Added to portfolio

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,6 +11,6 @@
 <p class="description">Hi my name is Sounkoun Soumare, I am a Ruby on 
 Rails developer. I like to learn and teach new technologies.
 If you are new to web development follow my blog and I will
-teach you some of the best way to start learrning</p>.
+teach you some of the best way to start learrning.</p>.
 </div>
 </div>
