--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -5,7 +5,7 @@
                
                        
                
-                        <li><a href="#"><%= image_tag('photopro.PNG') %></a></li>
+                        <li><a href="#"><%= image_tag('businessMatch.PNG') %></a></li>
                     
                         
            
